samples/_failures_safe/1761445317_ab9420_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c69fb6a3.c: In function ‘main’:
./samples/SAFE/__tmp_c69fb6a3.c:135:5: error: expected declaration or statement at end of input
  135 |     mat2.rows = read_int("Enter number of rows (1-10): ", 1, MAX_DIM);
      |     ^~~~
